# uvc-robot-implementation

./: .gitignore  Dockerfile  LICENSE  README.md  UVCProject.code-workspace  entrypoint.sh
.devcontainer/: devcontainer.json
ros/src/uvc_robot_bringup/: CMakeLists.txt  package.xml
ros/src/uvc_robot_bringup/launch/: bringup_simulated.launch.py
ros/src/uvc_robot_controller/: CMakeLists.txt  package.xml  uvc_controller_plugin.xml  uvc_robot_controller_plugin.xml
ros/src/uvc_robot_controller/config/: ros2_control.yaml
ros/src/uvc_robot_controller/include/uvc_robot_controller/: uvc_controller.hpp  uvc_controller_fsm.hpp  uvc_robot_controller.hpp
ros/src/uvc_robot_controller/src/: uvc_controller.cpp  uvc_controller_fsm.cpp  uvc_robot_controller.cpp  uvc_robot_controller_params.yaml
ros/src/uvc_robot_controller/test/: test_load_uvc_controller.cpp
ros/src/uvc_robot_controller/test/config/: test_uvc_controller.yaml
ros/src/uvc_robot_description/: CMakeLists.txt  package.xml
ros/src/uvc_robot_description/config/: rsp.config.rviz
ros/src/uvc_robot_description/description/: imu.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
ros/src/uvc_robot_description/launch/: rsp.launch.py
ros/src/uvc_robot_gazebo/: CMakeLists.txt  package.xml
ros/src/uvc_robot_gazebo/launch/: launch_sim.launch.py
